--- a/build.gradle
+++ b/build.gradle
@@ -11,9 +11,14 @@ repositories {
     mavenCentral()
 }
 
+group 'ui'
 dependencies {
     compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.11.1'
     compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.11.1'
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
 
+task(runMain, dependsOn: 'classes', type: JavaExec) {
+    main = 'ui.Main'
+    classpath = sourceSets.main.runtimeClasspath
+}
