--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,15 @@ eclipse
 .classpath
 .project
 .settings/
+
+.gradle
+/build/
+
+# Ignore Gradle GUI config
+gradle-app.setting
+
+# Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
+!gradle-wrapper.jar
+
+# Cache of project
+.gradletasknamecache
