--- a/build.gradle
+++ b/build.gradle
@@ -27,7 +27,7 @@ dependencies {
 }
 
 task(runMain, dependsOn: 'classes', type: JavaExec) {
-    main = 'ui.main'
+    main = 'main.Client'
     classpath = sourceSets.main.runtimeClasspath
     applicationDefaultJvmArgs = ["-Djava.net.preferIPv4Stack=true"]
 }
